--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Happy learning every day</title>
+    <link rel="stylesheet" href="plugins/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="plugins/codemirror/theme/vscode-dark.css" />
+    <!--支持代码折叠-->
+    <link rel="stylesheet" href="plugins/codemirror/addon/fold/foldgutter.css" />
     <style>
         body {
             margin: 0;
+            overflow: hidden;
         }
 
         .i-code,
@@ -23,32 +28,62 @@
             left: 50%;
         }
 
-        iframe{
+        iframe {
             width: 100%;
             height: 100%;
             border: none;
         }
 
-        .i-menu{
+        .i-menu {
             position: absolute;
             width: 100%;
-            background-color: red;
             height: 9px;
+            z-index: 3;
         }
     </style>
 </head>
 
 <body>
-    <div class="i-menu">
-
-    </div>
+    <div class="i-menu" id="i-menu"></div>
     <div class="i-code">
-
+        <textarea class="form-control" id="code" name="code"></textarea>
     </div>
     <div class="i-preview">
-        <iframe src="pages/css/css1.html"></iframe>
+        <iframe src="pages/dom/dom8.html"></iframe>
     </div>
+    <script src="plugins/codemirror/lib/codemirror.js"></script>
+    <!--javascript代码高亮-->
+    <script src="plugins/codemirror/mode/xml/xml.js"></script>
+    <script src="plugins/codemirror/mode/javascript/javascript.js"></script>
+    <script src="plugins/codemirror/mode/css/css.js"></script>
+    <script src="plugins/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="plugins/codemirror/mode/htmlembedded/htmlembedded.js"></script>
+    <!--支持代码折叠-->
+    <script src="plugins/codemirror/addon/mode/multiplex.js"></script>
+    <script src="plugins/codemirror/addon/fold/foldcode.js"></script>
+    <script src="plugins/codemirror/addon/fold/foldgutter.js"></script>
+    <script src="plugins/codemirror/addon/fold/brace-fold.js"></script>
+    <script src="plugins/codemirror/addon/fold/comment-fold.js"></script>
     <script>
+        var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+            //实现javascript代码高亮
+            // mode: "text/javascript",
+            mode: "application/x-ejs",
+            //显示行号
+            lineNumbers: true,
+            //设置主题
+            theme: "vscode-dark",
+            //代码折叠
+            lineWrapping: true,
+            foldGutter: true,
+            gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"],
+            //括号匹配
+            matchBrackets: true,
+            //只读
+            readOnly: true
+        });
+        editor.setSize('100%', '100%');
+
         function loadXMLDoc() {
             var xmlhttp;
             if (window.XMLHttpRequest) {
@@ -60,11 +95,12 @@
             }
             xmlhttp.onreadystatechange = function () {
                 if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                    console.log(xmlhttp.responseText)
-                    console.log(xmlhttp)
+                    // console.log(xmlhttp.responseText)
+                    editor.setValue(xmlhttp.responseText);
+                    return xmlhttp.responseText
                 }
             }
-            xmlhttp.open("GET", "pages/css/page.html", true);
+            xmlhttp.open("GET", "pages/dom/dom8.html", true);
             xmlhttp.send();
         }
         loadXMLDoc()
