--- a/pages/css/css1.html
+++ b/pages/css/css1.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>css1</title>
+    <title>css 基础测试1</title>
+    <style>
+        /* 公共部分 */
+        dl {
+            line-height: 1.5;
+            margin: 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            background-color: #fff;
+        }
+
+        dd {
+            word-break: break-all;
+            text-align: right;
+            margin-left: 0;
+        }
+
+        dd:empty::before {
+            content: '-';
+            color: #999;
+        }
+
+        /* absolute实现 */
+        /* dt {
+            position: absolute;
+        }
+
+        dd {
+            margin-left: 5em;
+        } */
+
+        /* flex实现 */
+        dl {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        dt {
+            width: 5em;
+        }
+
+        dd {
+            width: calc(100% - 5em);
+        }
+
+        /* grid实现 */
+        /* dl {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            grid-column-gap: 1em;
+        } */
+
+        /* float实现 */
+        /* dt {
+            width: 5em;
+            float: left;
+        }
+
+        dd {
+            overflow: hidden;
+        } */
+
+        /* 流体特性实现 */
+        /* dd {
+            margin: -1.5em 0 0 5em;
+        } */
+    </style>
 </head>
+
 <body>
-    hello world!
+    <dl>
+        <dt>手机系统</dt>
+        <dd>Android</dd>
+        <dt>登陆方式</dt>
+        <dd>QQ 互联登陆</dd>
+        <dt>绑定时间</dt>
+        <dd>2019-01-02 11:10</dd>
+        <dt>绑定状态</dt>
+        <dd>有效</dd>
+    </dl>
 </body>
+
 </html>
