--- a/pages/css/css9.html
+++ b/pages/css/css9.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>css1</title>
-    <style>
-        /* .coo-tree {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>css 基础测试9</title>
+  <style>
+    /* .coo-tree {
   margin-left: 1em;
 }
 .coo-tree .coo-tree-item {
@@ -26,50 +26,50 @@
   overflow: hidden;
   text-overflow: ellipsis;
 } */
-        .coo-tree {
-            margin-left: 1em;
-        }
+    .coo-tree {
+      margin-left: 1em;
+    }
 
-        .coo-tree .coo-tree-item {
-            display: table;
-            width: 100%;
-            line-height: 40px;
-        }
+    .coo-tree .coo-tree-item {
+      display: table;
+      width: 100%;
+      line-height: 40px;
+    }
 
-        .coo-tree .coo-left-box {
-            display: table-cell;
-            white-space: nowrap;
-        }
+    .coo-tree .coo-left-box {
+      display: table-cell;
+      white-space: nowrap;
+    }
 
-        .coo-tree .coo-right-box {
-            display: table-cell;
-            white-space: nowrap;
-        }
+    .coo-tree .coo-right-box {
+      display: table-cell;
+      white-space: nowrap;
+    }
 
-        .coo-tree .coo-middle-box {
-            display: table-cell;
-            width: 9999px;
-        }
+    .coo-tree .coo-middle-box {
+      display: table-cell;
+      width: 9999px;
+    }
 
-        .coo-tree .coo-middle-box div {
-            display: table;
-            width: 100%;
-            table-layout: fixed;
-        }
+    .coo-tree .coo-middle-box div {
+      display: table;
+      width: 100%;
+      table-layout: fixed;
+    }
 
-        .coo-tree .coo-middle-box div p {
-            margin: 0;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            font-size: 16px;
-        }
-    </style>
+    .coo-tree .coo-middle-box div p {
+      margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      font-size: 16px;
+    }
+  </style>
 </head>
 
 <body>
-    <div style="width: 300px;">
-        <!-- <div class="coo-tree">
+  <div style="width: 300px;">
+    <!-- <div class="coo-tree">
                   <div class="coo-tree-item">
                     <span class="coo-left-box">
                       <i class="el-icon-caret-bottom"></i>
@@ -93,35 +93,35 @@
                     <span class="coo-middle-box">次是一个新的故事这次是一个新的故事</span>
                   </div>
                 </div>-->
-        <div class="coo-tree">
-            <div class="coo-tree-item">
-                <span class="coo-left-box">
-                    left
-                </span>
-                <span class="coo-middle-box">
-                    <div>
-                        <p> 次是一个新的故事这次是一个新的故事 </p>
-                    </div>
-                </span>
-                <span class="coo-right-box">
-                    icon
-                </span>
-            </div>
-            <div class="coo-tree-item">
-                <span class="coo-left-box">
-                    left
-                </span>
-                <span class="coo-middle-box">
-                    <div>
-                        <p> 次是一个新的故事这次是一个新的故事 </p>
-                    </div>
-                </span>
-                <span class="coo-right-box">
-                    icon
-                </span>
-            </div>
-        </div>
+    <div class="coo-tree">
+      <div class="coo-tree-item">
+        <span class="coo-left-box">
+          left
+        </span>
+        <span class="coo-middle-box">
+          <div>
+            <p> 次是一个新的故事这次是一个新的故事 </p>
+          </div>
+        </span>
+        <span class="coo-right-box">
+          icon
+        </span>
+      </div>
+      <div class="coo-tree-item">
+        <span class="coo-left-box">
+          left
+        </span>
+        <span class="coo-middle-box">
+          <div>
+            <p> 次是一个新的故事这次是一个新的故事 </p>
+          </div>
+        </span>
+        <span class="coo-right-box">
+          icon
+        </span>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
