--- a/pages/css/css5.html
+++ b/pages/css/css5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>css5</title>
+    <title>css 基础测试5</title>
     <style>
         .color-container {
             --width: calc((100vw - 20px) / 5 - 10px);
