--- a/pages/css/css8.html
+++ b/pages/css/css8.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>css1</title>
+    <title>css 基础测试8</title>
     <style>
         /* 解法2：flex 方案 */
         .btn-group {
