--- a/pages/dom/dom2.html
+++ b/pages/dom/dom2.html
@@ -11,13 +11,13 @@
 <body>
     <div id="container" class="container">
         <section>
-            <img src="../../assets/img//mm.jpg" alt="外层图片" />
+            <img src="../../images/mm.jpg" alt="外层图片" />
             <p>
-                <img src="../../assets/img/mm1.jpg" alt="示意图1" />
-                <img src="../../assets/img/mm2.jpg" alt="示意图2" />
-                <img id="compareImg" src="../../assets/img/mm3.jpg" alt="示意图3" />
-                <img src="../../assets/img/mm4.jpg" alt="示意图4" />
-                <img src="../../assets/img/mm5.jpg" alt="示意图5" />
+                <img src="../../images/mm1.jpg" alt="示意图1" />
+                <img src="../../images/mm2.jpg" alt="示意图2" />
+                <img id="compareImg" src="../../images/mm3.jpg" alt="示意图3" />
+                <img src="../../images/mm4.jpg" alt="示意图4" />
+                <img src="../../images/mm5.jpg" alt="示意图5" />
             </p>
         </section>
     </div>
